# lethon-os

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: command-bar.tsx  hud.tsx  memory-graph.tsx  shard-detail.tsx  tier-legend.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/hooks/: use-keyboard-shortcuts.ts
frontend/lib/: sample-data.ts  types.ts  utils.ts
lethon_os/: __init__.py  controller.py  pruner.py  schemas.py  utility.py
lethon_os/api/: __init__.py  controller.py  schemas.py
lethon_os/security/: __init__.py  audit_log.py  keys.py  schemas.py  scrubber.py  secure_controller.py  signing.py
lethon_os/tiers/: __init__.py  archive.py  cache.py  vector.py
tests/: conftest.py  test_archive_tier.py  test_cache_tier.py  test_controller.py  test_pruner.py  test_schemas.py  test_security_audit_log.py  test_security_guards.py  test_security_keys.py  test_security_scrubber.py  test_security_secure_controller.py  test_security_signing.py  test_utility.py  test_vector_tier.py
