[project]
name = "lethon-os"
version = "0.1.0"
description = "Self-governing memory architecture for long-horizon LLM agents."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.7",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "aiosqlite>=0.20",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.20",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lethon_os"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
